--- a/PSS/PSS/Pages/_Host.cshtml
+++ b/PSS/PSS/Pages/_Host.cshtml
@@ -15,7 +15,7 @@
 </head>
 
 <body style="background-color: black; margin-right: 0; margin-left: 10px; margin-top: 0;">
-    <component type="typeof(App)" render-mode="ServerPrerendered" /> @*Whatever this line is/does, removing it causes the app to not work... 🤔*@
+    <component type="typeof(App)" render-mode="Server" /> @*Whatever this line is/does, removing it causes the app to not work... 🤔*@
     <script src="_framework/blazor.server.js"></script> @*This stupid line is needed for some reason*@
     <div id="components-reconnect-modal"></div> @*https://stackoverflow.com/a/59395390*@
 </body>
