Lot of good progress on Trash revision, but header is bugged :(

--- a/PSS/PSS/Pages/AlbumView.razor
+++ b/PSS/PSS/Pages/AlbumView.razor
@@ -141,6 +141,7 @@
         UpdateQueries();
         libContentViewer.AddContentBottom();
         
+        //TODO: try calling clear checks here
         //This is stupid
         StateHasChanged();
         await InvokeAsync(StateHasChanged);
